more rigorous background-image positioning ensure it's centered and covers the entire space

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -17,7 +17,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	background: $bgColor no-repeat;
+	background: $bgColor 50% no-repeat;
+	background-size: cover;
 	opacity: 0.5;
 	transition: opacity 0.2s;
 
